Add NotePM skill support with MCP server integration
- Add skill-specific environment variable naming convention ({SKILL_NAME}_{VARIABLE_NAME})
- Add NotePM skill configuration to .env.example
- Add skills/notepm-search/ to .gitignore (external MCP server, not tracked)
- Support external MCP server integration for skills
- NotePM skill provides search and content retrieval from NotePM API

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,18 @@
 # VERTEXAI_LOCATION=us-central1
 # 注: Vertex AIの認証はApplication Default Credentials (ADC)を使用します
 #     gcloud auth application-default login を実行してください
+
+# ============================================================
+# Skill-Specific Configuration
+# ============================================================
+# スキル固有の環境変数は {SKILL_NAME}_{VARIABLE_NAME} 形式で設定
+
+# --- NotePM Skill ---
+# NotePMの検索とコンテンツ取得機能を提供するスキル
+# NOTEPM_SKILL_TEAM=your-notepm-team-name
+# NOTEPM_SKILL_API_TOKEN=your-notepm-api-token
+
+# --- 将来のスキル例 ---
+# GITHUB_SKILL_TOKEN=your-github-token
+# SLACK_SKILL_WEBHOOK_URL=your-slack-webhook-url
+# JIRA_SKILL_API_KEY=your-jira-api-key
